# etherface

./: .dockerignore  .gitignore  Dockerfile  docker-bake.hcl
.github/workflows/: docker-build-deploy.yaml
deploy/prod/: cert.yaml  kustomization.yaml  serviceaccount.yaml
deploy/prod/etherface/: .env  deploy.yaml  kustomization.yaml  secret.yaml  sts.yaml
deploy/prod/rest/: cors.yaml  deploy.yaml  hpa.yaml  kustomization.yaml  route.yaml  svc.yaml
deploy/prod/ui/: deploy.yaml  route.yaml
etherface-lib/: Cargo.toml
etherface-lib/src/: config.rs  error.rs
etherface-lib/src/api/: mod.rs
etherface-lib/src/api/github/: token.rs
etherface-lib/src/api/github/handler/: search.rs
etherface-lib/src/api/vault/: mod.rs
etherface-lib/src/database/handler/: github_repository.rs  github_user.rs
etherface-rest/src/: main.rs  v1.rs
etherface/src/fetcher/: github.rs
migrations/2022-08-01-201536_create_materialized_views/: up.sql
