[package]
name = "etherface-lib"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
toml = "0.8"
url = "2.0"
hyperx = "1.4.0"
select = "0.6"
sha3 = "0.10"
lazy_static = "1.0"
regex = "^1.0"
dotenv = "0.15"

semver = "1.0"
lenient_semver = "0.4"

diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2"] }
diesel-derive-enum = { version = "1.1.2", features = ["postgres"] }

futures = "^0.3"
rustify = "0.5.3"
rustify_derive = "0.5.2"
derive_builder = "0.12.0"
vaultrs = "^0.6"
tokio = { version = "1.0", features = ["full"] }
